# CheatersCheetahCheat

./: .gitignore  .gitmodules  CMakeLists.txt  CheatersCheetahCheat.sln  CinematicUnityExplorer.patch  README.md  build  build-static  dll.def  gdb  gdbwait  launchgame  nuget.config
CheatersCheetahCheat/: CheatObject.cs  CheatersCheetahCheat.csproj  Plugin.cs
CheatersCheetahCheat/cheats/: BypassLegit.cs  BypassLobbySize.cs  ChatOverlay.cs  ICheat.cs  Menu.cs  Nospread.cs  Spammer.cs  VoiceHold.cs
ScriptEngine/: Plugin.cs  ScriptEngine.csproj
src/: gamesdk.cpp  gamesdk.h  gui.cpp  gui.h  hooks.cpp  hooks.h  il2cpp.cpp  il2cpp.h  logger.h  main.cpp  proxy.cpp  proxy.h  settings.h
src/Hacks/: autofire.cpp  autofire.h  chatlagexploit.cpp  chatlagexploit.h  compressedpacketinflateexploit.cpp  compressedpacketinflateexploit.h  spammer.cpp  spammer.h  voicespammer.cpp  voicespammer.h
